@@ -2,11 +2,14 @@ EPviewer
 (c)Raja S
 rajajs {at} gmail {dot} com
 
-version 0.9.8
+
+version
 -------------
+* Fixed numbering of jpgs when exporting powerpoint presentations in windows
+* Possible now to rename files by clicking on name in playlist pane
+* Popup menu with access to some functions on right click (when caliper not selected)
 * Use native icons on toolbar for file open and save
 * Drag and drop for reordering in playlist editor
-
 
 version 0.9.5
 --------------
